--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,13 @@
         android:layout_height="0dp"
         android:importantForAccessibility="no"
         android:scaleType="centerCrop"
+        android:src="@drawable/start_decor"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView1"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/start_decor" />
+        app:layout_constraintVertical_bias="1.0" />
 
 
     <TextView
